--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,22 +1,42 @@
-  <canvas-whiteboard #canvasWhiteboard
-                     [drawButtonClass]="'drawButtonClass'"
-                     [drawButtonText]="'Draw'"
-                     [clearButtonClass]="'clearButtonClass'"
-                     [clearButtonText]="'Clear'"
-                     [undoButtonText]="'Undo'"
-                     [undoButtonEnabled]="true"
-                     [redoButtonText]="'Redo'"
-                     [redoButtonEnabled]="true"
-                     [colorPickerEnabled]="true"
-                     [downloadedFileName]="'examplefileName'"
-                     (onBatchUpdate)="sendBatchUpdate($event)"
-                     (onClear)="onCanvasClear()"
-                     (onUndo)="onCanvasUndo($event)"
-                     (onRedo)="onCanvasRedo($event)">
-  </canvas-whiteboard>
-  <br>
-  <button (click)="yay()">bla</button>
-  <br>
-  <div>
-    {{myupdates | json}}
+<div class="p-0 container-fluid no-gutters p-0 b-0 m-0">
+  <div class="row no-gutters">
+    <div class="col-sm-9 p-0 b-0 m-0">
+      <app-canvasblob></app-canvasblob>
+    </div>
+    <div class="col-sm-3 bg-primary p-0 b-0 m-0">
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+      <p>Chat with tha CHAD</p>
+    </div>
   </div>
+  <div class="row no-gutters">
+  </div>
+</div>
