--- a/frontend/src/app/canvasblob/canvasblob.component.html
+++ b/frontend/src/app/canvasblob/canvasblob.component.html
@@ -1,1 +1,7 @@
-<p>canvasblob works!</p>
+<canvas-whiteboard #canvasWhiteboard [drawButtonClass]="'drawButtonClass'" [drawButtonText]="'Draw'"
+[clearButtonClass]="'clearButtonClass'" [clearButtonText]="'Clear'" [undoButtonText]="'Undo'"
+[undoButtonEnabled]="true" [redoButtonText]="'Redo'" [redoButtonEnabled]="true"
+[colorPickerEnabled]="true" [downloadedFileName]="'examplefileName'"
+(onBatchUpdate)="sendBatchUpdate($event)" (onClear)="onCanvasClear()"
+(onUndo)="onCanvasUndo($event)" (onRedo)="onCanvasRedo($event)">
+</canvas-whiteboard>
