--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-canvasblob></app-canvasblob>
+
+<app-menu-bar></app-menu-bar>
+<!-- <app-general-layout></app-general-layout> -->
+<!-- <app-canvasblob></app-canvasblob> -->
