--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,11 +1,27 @@
 .col-sm-3{
-    height:100vh;
     position:fixed;
-    overflow-y:scroll;
     right:0;
 }
 
 .col-sm-9{
     height:94vh;
     position:fixed;
+}
+
+#chatBox{
+    height:80vh;
+    overflow-y:scroll;
+}
+
+#messageBox{
+    height:20vh;
+    bottom:0;
+}
+
+textarea{
+    border-radius: 0px;
+    min-width:100vw;
+    max-width:100vw;
+    min-height:100vw;
+    max-height:100vw;
 }
