--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,5 +1,6 @@
 .col-sm-3{
     position:fixed;
+    height:94vh;
     right:0;
 }
 
@@ -13,15 +14,16 @@
     overflow-y:scroll;
 }
 
-#messageBox{
-    height:20vh;
-    bottom:0;
-}
-
 textarea{
     border-radius: 0px;
     min-width:100vw;
     max-width:100vw;
     min-height:100vw;
     max-height:100vw;
+}
+
+p{
+    margin: 0px;
+    border: 0px;
+    padding: 0px;
 }
