--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,46 +3,41 @@
     <div class="col-sm-9 p-0 b-0 m-0">
       <app-canvasblob></app-canvasblob>
     </div>
-    <div class="col-sm-3 bg-primary p-0 b-0 m-0" id="chatBox">
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-      <p>Chat with tha CHAD</p>
-    </div>
-  </div>
-  <div class="row no-gutters">
-    <div class="col-sm-3 bg-warning p-0 b-0 m-0" id="messageBox">
-      <div class="form-group">
-        <!-- <label for="exampleFormControlTextarea1"></label> -->
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Send a message."></textarea>
+    <div class="col-sm-3 bg-primary p-0 b-0 m-0">
+      <div id="chatBox">
+        <p>Chat with tha CHADdrdssadds</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD</p>
+        <p>Chat with tha CHAD5555</p>
+        <p>Chat with tha CHAD1234</p>
       </div>
+        <textarea class="form-control p-0 b-0 m-0" id="exampleFormControlTextarea1" rows="3" placeholder="Send a message."></textarea>
     </div>
   </div>
 </div>
