Intermittent commit of layout, replaced grid menubar with toolbar.

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
 
-<app-menu-bar></app-menu-bar>
-<!-- <app-general-layout></app-general-layout> -->
+<!-- <app-menu-bar></app-menu-bar> -->
+<app-general-layout></app-general-layout>
 <!-- <app-canvasblob></app-canvasblob> -->
