--- a/frontend/src/app/canvasblob/canvasblob.component.css
+++ b/frontend/src/app/canvasblob/canvasblob.component.css
@@ -1,4 +1,6 @@
 canvas-whiteboard {
-    display: block;
-    height: 100vh;
+    /* display: block; */
+    /* height: 100vh; */
+    height:inherit;
+    width: inherit;
 }
