--- a/frontend/src/app/general-layout/general-layout.component.html
+++ b/frontend/src/app/general-layout/general-layout.component.html
@@ -1,10 +1,16 @@
-<!-- <app-menu-bar></app-menu-bar> -->
-<mat-grid-list cols="12" rowHeight="100px">
-    <mat-grid-tile
-        *ngFor="let tile of tiles"
-        [colspan]="tile.cols"
-        [rowspan]="tile.rows"
-        [style.background]="tile.color">
-      {{tile.text}}
-    </mat-grid-tile>
-  </mat-grid-list>
+<mat-toolbar>
+  <span>Shape Slate <app-menu-bar></app-menu-bar></span>
+</mat-toolbar>
+<mat-grid-list cols="18" rowHeight="2:1" [gutterSize]="'0px'">
+  <!-- <mat-grid-tile colspan="18" id="menuBar"> -->
+  <!-- <app-menu-bar></app-menu-bar> -->
+  <!-- </mat-grid-tile> -->
+  <mat-grid-tile colspan="13" id="drawBlock">
+    <!-- <mat-card> -->
+    <!-- <app-canvasblob></app-canvasblob> -->
+    <!-- </mat-card> -->
+  </mat-grid-tile>
+  <mat-grid-tile colspan="5" id="chatBlock">
+
+  </mat-grid-tile> -->
+</mat-grid-list>
