--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,15 +1,7 @@
 <div class="p-0 container-fluid no-gutters p-0 b-0 m-0">
   <div class="row no-gutters">
     <div class="col-sm-9 p-0 b-0 m-0">
-      <app-canvasblob></app-canvasblob>
-      <!--<br>-->
-      <!--<button (click)="yay()">bla</button>-->
-      <!--<br>-->
-      <!--<div>-->
-      <!--  {{myupdates | json}}-->
-      <!--</div>-->
-      <!--<app-user></app-user>-->
-      <!--<app-slateroom></app-slateroom>-->
+      <app-board></app-board>
     </div>
     <div class="col-sm-3 bg-primary p-0 b-0 m-0">
       <div id="chatBox">
