Database receives stuff properly!

--- a/frontend/src/app/board/board.component.html
+++ b/frontend/src/app/board/board.component.html
@@ -1,6 +1,7 @@
 <canvas-whiteboard #canvasWhiteboard 
     [drawButtonClass]="'drawButtonClass'" 
     [drawButtonText]="'Draw'"
+    [drawingEnabled]="true"
     [clearButtonClass]="'clearButtonClass'" 
     [clearButtonText]="'Clear'"
     [undoButtonText]="'Undo'"
