Clear function implemented, also made button to get drawings from db

--- a/frontend/src/app/board/board.component.html
+++ b/frontend/src/app/board/board.component.html
@@ -16,10 +16,10 @@
     (onRedo)="onCanvasRedo($event)">
 </canvas-whiteboard>
 <br>
-<button (click)="yay()">bla</button>
+<button (click)="yay()">yay-function</button>
 <br>
 <div>
-    {{myupdates | json}}
+    {{currentBoard | json}}
 </div>
 <app-user></app-user>
 <app-slateroom></app-slateroom>
