--- a/frontend/src/app/canvasblob/canvasblob.component.css
+++ b/frontend/src/app/canvasblob/canvasblob.component.css
@@ -1,5 +1,6 @@
 canvas-whiteboard {
     /* display: block; */
+    /* width:100vw; */
     /* height: 100vh; */
     height:inherit;
     width: inherit;
