--- a/frontend/src/app/menu-bar/menu-bar.component.html
+++ b/frontend/src/app/menu-bar/menu-bar.component.html
@@ -1,24 +1,7 @@
-<button mat-button [matMenuTriggerFor]="aboveMenu" matTooltip="First&#013;kaas&#013; worst">Above</button>
-<mat-menu #aboveMenu="matMenu" yPosition="above">
-  <button mat-menu-item>Item 1</button>
-  <button mat-menu-item>Item 2</button>
-</mat-menu>
+<button mat-button matTooltip="First&#013;kaas&#013;worst">Name placeholder</button>
 
-<button mat-button [matMenuTriggerFor]="belowMenu" matTooltip="First&#013;kaas&#013; worst">Below</button>
-<mat-menu #belowMenu="matMenu" yPosition="below">
-  <button mat-menu-item>Item 1</button>
-  <button mat-menu-item>Item 2</button>
-</mat-menu>
+<button mat-button matTooltip="First&#013;kaas&#013;worst">Users</button>
 
-<button mat-button [matMenuTriggerFor]="beforeMenu" matTooltip="First&#013;kaas&#013; worst">Before</button>
-<mat-menu #beforeMenu="matMenu" xPosition="before">
-  <button mat-menu-item>Item 1</button>
-  <button mat-menu-item>Item 2</button>
-</mat-menu>
+<button mat-button matTooltip="First&#013;kaas&#013;worst">Board</button>
 
-
-<button mat-button [matMenuTriggerFor]="afterMenu" matTooltip="First&#013;kaas&#013; worst">After</button>
-<mat-menu #afterMenu="matMenu" xPosition="after">
-  <button mat-menu-item>Item 1</button>
-  <button mat-menu-item>Item 2</button>
-</mat-menu>
+<button mat-button matTooltip="First&#013;kaas&#013;worst">Room</button>
