Added database updater with lots of bugs :)

--- a/frontend/src/app/board/board.component.html
+++ b/frontend/src/app/board/board.component.html
@@ -16,10 +16,12 @@
     (onRedo)="onCanvasRedo($event)">
 </canvas-whiteboard>
 <br>
-<button (click)="yay()">yay-function</button>
+<button (click)="drawDatabaseUpdates()">drawDatabaseUpdate</button>
 <br>
+<!-- 
 <div>
     {{currentBoard | json}}
-</div>
+</div> 
+-->
 <app-user></app-user>
 <app-slateroom></app-slateroom>
