--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,39 +5,40 @@
     </div>
     <div class="col-sm-3 bg-primary p-0 b-0 m-0">
       <div id="chatBox">
-        <p>Chat with tha CHADdrdssadds</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD</p>
-        <p>Chat with tha CHAD5555</p>
-        <p>Chat with tha CHAD1234</p>
+        <!-- <table class="table table-striped">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">First</th>
+              <th scope="col">Last</th>
+              <th scope="col">Handle</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">1</th>
+              <td>Mark</td>
+              <td>Otto</td>
+              <td>@mdo</td>
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+              <td>Jacob</td>
+              <td>Thornton</td>
+              <td>@fat</td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td>Larry</td>
+              <td>the Bird</td>
+              <td>@twitter</td>
+            </tr>
+          </tbody>
+        </table> -->
       </div>
-        <textarea class="form-control p-0 b-0 m-0" id="exampleFormControlTextarea1" rows="3" placeholder="Send a message."></textarea>
+        <app-message-box></app-message-box>
+      <!-- <textarea class="form-control p-0 b-0 m-0" id="exampleFormControlTextarea1"
+        placeholder="Send a message."></textarea> -->
     </div>
   </div>
 </div>
