Added hotkeys and emoji's to the chaD?

--- a/frontend/src/app/message-box/message-box.component.html
+++ b/frontend/src/app/message-box/message-box.component.html
@@ -1,5 +1,5 @@
 <form (keyup.shift.enter)="newLineInMessage($event)" (keyup.enter)="submitMessage($event)">
-    <textarea [(ngModel)]="message.typedtext" class="form-control p-0 b-0 m-0" id="exampleFormControlTextarea1" placeholder="Send a message." name="textareamessage"></textarea>
+    <textarea [(ngModel)]="message.typedtext" class="form-control p-0 b-0 m-0" id="exampleFormControlTextarea1" placeholder="Send a message." name="textareamessage" data-emoji-picker="true"></textarea>
 </form>
 
 
