--- a/frontend/src/app/board/board.component.html
+++ b/frontend/src/app/board/board.component.html
@@ -16,12 +16,15 @@
     (onRedo)="onCanvasRedo($event)">
 </canvas-whiteboard>
 <br>
-<button (click)="drawDatabaseUpdates()">drawDatabaseUpdate</button>
-<br>
+<!-- <button (click)="drawDatabaseUpdates()">drawDatabaseUpdate</button> -->
 <!-- 
+<br>
+<button (click)="testButton()">testButton</button>
+
 <div>
     {{currentBoard | json}}
-</div> 
+</div>  
 -->
+
 <app-user></app-user>
 <app-slateroom></app-slateroom>
