Added backend from websocket chat spike in the backend, added frontend elements from the chat spike, not working yet just an intermittent commit.

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,6 +5,9 @@
     </div>
     <div class="col-sm-3 bg-primary p-0 b-0 m-0">
       <div id="chatBox">
+        <tbody id="chatlog">
+        </tbody>
+        <!-- <app-chat-log-component></app-chat-log-component> -->
         <!-- <table class="table table-striped">
           <thead>
             <tr>
