--- a/frontend/src/app/message-box/message-box.component.html
+++ b/frontend/src/app/message-box/message-box.component.html
@@ -1,3 +1,3 @@
-<form (keyup.shift.enter)="newLineInMessage($event)" (keyup.enter)="submitMessage($event)">
+<form (keyup.shift.enter)="newLineInMessage($event)" (keyup.enter)="sendUserMessage($event)">
     <textarea [(ngModel)]="message.typedtext" class="form-control p-0 b-0 m-0" placeholder="Send a message." name="textareamessage" data-emoji-picker="true"></textarea>
 </form>
