Fixed chat in the master and resolved small merge issue that arose which caused some naming issues.

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,6 +3,7 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
@@ -21,8 +22,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         User list if too long
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -38,9 +38,7 @@
             </ul>
 
             <form class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="text" placeholder="username">
-              <input class="form-control mr-sm-2" type="password" placeholder="password">
-              <button class="btn btn-outline-success" type="submit">Login</button>
+              <button class="btn btn-outline-success" type="button" onclick="someStupidFunction()">Logout</button>
             </form>
         </div>
     </nav>
