login and board working, room omitted

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -13,11 +13,11 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-ligh p-0" *ngIf="user">
         <a class="navbar-brand" href="#">ShapeSlate</a>
-        <!-- <div class="navbar-nav">
+        <div class="navbar-nav">
           <a class="nav-item nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
           <a class="nav-item nav-link" routerLink="/users" routerLinkActive="active">Users</a>
           <a class="nav-item nav-link" (click)="logout()">Logout</a>
-      </div> -->
+      </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
