--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -10,7 +10,7 @@ canvas-whiteboard {
     width: 100%;
     height: 15px;
     border-radius: 5px;  
-    background: #d3d3d3;
+    background: #80ccff;
     outline: none;
     opacity: 0.7;
     -webkit-transition: .2s;
@@ -23,7 +23,8 @@ canvas-whiteboard {
     width: 25px;
     height: 25px;
     border-radius: 50%; 
-    background: #4CAF50;
+    background: #0099ff;
+    border-color: #006bb3;
     cursor: pointer;
   }
   
@@ -31,6 +32,7 @@ canvas-whiteboard {
     width: 25px;
     height: 25px;
     border-radius: 50%;
-    background: #4CAF50;
+    background: #0099ff;
+    border-color: #006bb3;
     cursor: pointer;
   }
