--- a/frontend/src/app/slateroom/enter.component.html
+++ b/frontend/src/app/slateroom/enter.component.html
@@ -4,9 +4,9 @@
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
             <div class="form-group">
                 <label for="room name">Room Name</label>
-                <input type="text" formControlName="roomName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.roomName.errors }" />
-                <div *ngIf="submitted && f.roomName.errors" class="invalid-feedback">
-                    <div *ngIf="f.roomName.errors.required">Room name is required</div>
+                <input type="text" formControlName="name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.name.errors }" />
+                <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
+                    <div *ngIf="f.name.errors.required">Room name is required</div>
                 </div>
             </div>
             <div class="form-group">
