--- a/frontend/src/app/slateroom/create.component.html
+++ b/frontend/src/app/slateroom/create.component.html
@@ -3,10 +3,10 @@
     <div class="card-body">
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
             <div class="form-group">
-                <label for="name">Room Name</label>
-                <input type="text" formControlName="name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.name.errors }" />
-                <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
-                    <div *ngIf="f.name.errors.required">Room Name is required</div>
+                <label for="roomname">Room Name</label>
+                <input type="text" formControlName="roomname" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.roomname.errors }" />
+                <div *ngIf="submitted && f.roomname.errors" class="invalid-feedback">
+                    <div *ngIf="f.roomname.errors.required">Room Name is required</div>
                 </div>
             </div>
             <div class="form-group">
