Added time to a message, changed background color, BUG/FEATURE introduced wherein name is given but is currently httpstatus.

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -3,12 +3,14 @@
     <div class="col-sm-9 p-0 b-0 m-0">
       <app-board></app-board>
     </div>
-    <div class="col-sm-3 bg-primary p-0 b-0 m-0">
+    <div class="col-sm-3 p-0 b-0 m-0">
       <div id="chatBox">
-        <tbody id="chatlog">
-        </tbody>
+        <table class="table table-striped">
+          <tbody id="chatlog">
+          </tbody>
+        </table>
       </div>
-        <app-message-box></app-message-box>
+      <app-message-box></app-message-box>
     </div>
   </div>
 </div>
