--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -15,11 +15,11 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-ligh p-0" *ngIf="user">
-    <a class="navbar-brand">ShapeSlate</a>
+  <nav class="border-bottom navbar navbar-expand-lg navbar-light bg-light p-0" *ngIf="user">
+    <a class="navbar-brand"><img src="./assets/images/ShapeSlateLogo.png" id="navbar-image"></a>
     <div class="navbar-nav">
       <a class="nav-item nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"
-        href="#">Home</a>
+       id="userID"></a>
       <a class="nav-item nav-link" (click)="exit()" href="#">Exit Room</a>
       <a class="nav-link" (click)="logout()" href="#">Logout</a>
       <a class="nav-link" id="roomdID"></a>
