--- a/frontend/src/app/board/board.component.css
+++ b/frontend/src/app/board/board.component.css
@@ -1,5 +1,8 @@
 canvas-whiteboard {
     display: block;
-    height: 80vh;
-    width: 100vw;
+    height: 100vh;
+    width: inherit;
+    border:0px;
+    border-radius: 0px;
+    overflow: hidden;
 }
