--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -3,9 +3,9 @@
     <div class="col-sm-9 p-0 b-0 m-0">
       <app-board></app-board>
     </div>
-    <div class="col-sm-3 p-0 b-0 m-0">
+    <div class="col-sm-3 p-0 border-left m-0">
       <div id="chatBox">
-        <table class="table table-striped">
+        <table class="table">
           <tbody id="chatlog">
           </tbody>
         </table>
